@@ -24,8 +24,8 @@
 # Set to /var/lib/mosquitto/ if running as a proper service.
 #persistence_location
 
-# Time in seconds to wait before resending an outgoing message.
-#msg_timeout 10
+# Time in seconds to wait before resending an outgoing QoS=1 or QoS=2 message.
+#retry_interval 20
 
 # Time in seconds between updates of the $SYS tree.
 #sys_interval 10
